# fortress

./: .gitignore  .rustfmt.toml  Cargo.toml  ENCRYPTION.md  README.md  SYNCING.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: test.yml
fortress/: Cargo.toml  style.css
fortress/src/: create_database.rs  dialog_modal.rs  entry_editor.rs  generate.rs  generate_popover.rs  main.rs  menu.rs  open_database.rs  password_entry.rs  pasteboard.rs  view_database.rs  window.glade
fortresscrypto/: Cargo.toml
fortresscrypto/src/: error.rs  lib.rs  newtype_macros.rs  siv.rs
libfortress/: Cargo.toml  LICENSE-APACHE
libfortress/src/: database_object_map.rs  encryption.rs  errors.rs  lib.rs  newtype_macros.rs  sync_parameters.rs
libfortress/src/database_object/: directory.rs  entry.rs  mod.rs
libfortress/tests/: sync_test.rs
libfortress/tests/sync_server/: mod.rs
src/: bin.rs  lib.rs  main.rs  style.css  window.glade
tools/: fortress_v1_to_fortress_v2.py  keepass_xml_to_fortress_json.py
ui/: .eslintignore  .eslintrc.cjs  .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  CreateDatabase.css  CreateDatabase.tsx  DirectoryItem.tsx  EntryEditor.css  EntryEditor.tsx  OpenDatabase.css  OpenDatabase.tsx  Settings.css  Settings.tsx  ViewDatabase.css  ViewDatabase.tsx  ffi.tsx  main.tsx  state.tsx  style.css
ui/src-tauri/: Cargo.toml  LICENSE-MIT  tauri.conf.json
ui/src-tauri/capabilities/: migrated.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
