[package]
authors = ["fpgaminer"]
name = "fortress"
version = "1.0.1"

[dependencies]
clap = "2.23"
data-encoding = "2.0.0-rc.1"
directories = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
libfortress = { path = "../libfortress" }

[dependencies.gtk]
features = ["v3_10"]
version = "0.1.2"
