[package]
authors = ["fpgaminer"]
name = "fortress"
version = "1.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
descrption = "Password manager"

[dependencies]
clap = "2.23"
data-encoding = "2.0.0-rc.1"
directories = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
libfortress = { version = "1", path = "../libfortress" }

[dependencies.gtk]
features = ["v3_10"]
version = "0.1.2"
