[package]
authors = ["fpgaminer"]
name = "fortress"
version = "1.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Password manager"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
data-encoding = "2.3.2"
directories = "4.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libfortress = { version = "1", path = "../libfortress" }
relm4 = { version = "0.4", features = ["macros"] }
relm4-components = "0.4"
