[package]
authors = ["fpgaminer"]
name = "fortresscrypto"
version = "1.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Cryptography helper library for fortress"

[dependencies]
byteorder = "1.0"
rand = "0.3"
rust-crypto = "0.2"
data-encoding = "2.0.0-rc.1"
serde = "1.0"
