[package]
authors = ["fpgaminer"]
name = "fortresscrypto"
version = "2.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Cryptography helper library for fortress"
edition = "2021"

[dependencies]
byteorder = "1"
rand = { version = "0.8.5", features = ["std"] }
data-encoding = "2.3.3"
serde = { version = "1", features = ["derive"] }
password-hash = "0.5.0"
scrypt = { version = "0.11.0", default-features = false }
subtle = "2.4.1"
sha2 = "0.10.6"
hmac = "0.12.1"
chacha20 = "0.9.1"