[package]
authors = ["fpgaminer"]
name = "libfortress"
version = "1.0.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Fortress library"
edition = "2021"

[dependencies]
byteorder = "1"
data-encoding = "2.3.2"
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.3.0"
reqwest = { version = "0.11", features = ["default-tls", "blocking", "json" ] }
tiny_http = "0.11"
fortresscrypto = { version = "1", path = "../fortresscrypto" }
subtle = "2.4.1"