[package]
authors = ["fpgaminer"]
name = "libfortress"
version = "2.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Fortress library"
edition = "2021"

[dependencies]
byteorder = "1"
data-encoding = "2.9.0"
rand = { version = "0.9.2", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.20.0"
reqwest = { version = "0.13", features = ["default-tls", "blocking", "json" ] }
tiny_http = "0.12"
fortresscrypto = { version = "2", path = "../fortresscrypto" }
subtle = "2.6.1"
url = { version = "2", features = ["serde"] }