[package]
authors = ["fpgaminer"]
name = "fortress"
version = "2.2.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Password manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.8.5", features = [] }
clap = { version = "4.5.48", features = ["derive"] }
data-encoding = "2.9.0"
directories = "6.0.0"
libfortress = { version = "2", path = "../../libfortress" }
url = "2.5.7"
tauri-plugin-dialog = "2.4.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
