[package]
authors = ["fpgaminer"]
name = "fortress"
version = "2.2.3"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress"
description = "Password manager"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.10", features = [] }
clap = { version = "4", features = ["derive"] }
data-encoding = "2"
directories = "6"
libfortress = { version = "2", path = "../../libfortress" }
url = "2"
tauri-plugin-dialog = "2.6"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
